k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cronpot-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: api
      app.kubernetes.io/name: cronpot
  template:
    metadata:
      labels:
        app.kubernetes.io/component: api
        app.kubernetes.io/name: cronpot
    spec:
      serviceAccountName: cronpot
      securityContext:
        fsGroup: 10001
        runAsGroup: 10001
        runAsNonRoot: true
        runAsUser: 10001
      containers:
        - name: api
          image: cronpot:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
          readinessProbe:
            httpGet:
              path: /readyz
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 10
            periodSeconds: 20
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
          volumeMounts:
            - name: vault
              mountPath: /vault
            - name: config
              mountPath: /config
              readOnly: true
      volumes:
        - name: vault
          persistentVolumeClaim:
            claimName: cronpot-vault
        - name: config
          configMap:
            name: cronpot-config
