k8s/base/worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cronpot-worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: worker
      app.kubernetes.io/name: cronpot
  template:
    metadata:
      labels:
        app.kubernetes.io/component: worker
        app.kubernetes.io/name: cronpot
    spec:
      serviceAccountName: cronpot
      securityContext:
        fsGroup: 10001
        runAsGroup: 10001
        runAsNonRoot: true
        runAsUser: 10001
      containers:
        - name: worker
          image: cronpot:latest
          imagePullPolicy: IfNotPresent
          command:
            - python
            - -m
            - cronpot
            - worker
            - --vault
            - /vault
            - --config
            - /config/cronpot.toml
          resources:
            requests:
              cpu: 25m
              memory: 96Mi
            limits:
              cpu: 250m
              memory: 256Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
          volumeMounts:
            - name: vault
              mountPath: /vault
            - name: config
              mountPath: /config
              readOnly: true
      volumes:
        - name: vault
          persistentVolumeClaim:
            claimName: cronpot-vault
        - name: config
          configMap:
            name: cronpot-config
