k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cronpot-api
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/component: api
    app.kubernetes.io/name: cronpot
  ports:
    - name: http
      port: 80
      targetPort: http
