k8s/base/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cronpot-api-ingress
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/component: api
      app.kubernetes.io/name: cronpot
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector: {}
      ports:
        - protocol: TCP
          port: 8080
